# instructions_control

./: .dockerignore  .gitignore  pyproject.toml
ci/: Dockerfile  Dockerfile_frontend  docker-compose-example.yaml  docker-compose.yaml  docker-compose_prod.yaml  nginx.conf
ci/jenkins/: docker_build.jenkins  docker_build_ub1.jenkins  docker_build_ub2.jenkins
frontend/: README.md  cypress.config.js  nginx.conf  package-lock.json  package.json
frontend/cypress/e2e/: homepage.cy.js  landing.cy.js  login.cy.js
frontend/cypress/support/: commands.js
frontend/public/: env-config-template.js  index.html
frontend/src/: App.js  config.js  httpClient.js  index.css  index.js
frontend/src/components/: Admin.js  AdminTabs.js  Control.js  Divisions.js  Home.js  Instructions.js  Landing.js  Login.js  PrivateRoute.js  Professions.js  Users.js  Users_last.js  Users_valid.js  index.js  universal_table.js
frontend/src/helpers/: ApiClient.js  GetFilename.js  PrivateRoute.js  SerializerFilters.js  constants.js
frontend/src/hooks/: useFillSelect.hook.js  useTableData.hook.js
src/: alembic.ini  app.py  constants.py  dependencies.py  routers.py  run.py  settings.py  templates_config.py
src/core/: global_placeholders.py
src/database/: orm.py
src/jobs/: ans.sh  que.sh  scheduler.py  worker.py  worker_t.py
src/scripts/: create_config.py  create_user.py
src/static/: pyproject.toml
src/tests/: conftest.py  test_common.py  test_divisions.py  test_instructions.py  test_professions.py  test_rules.py  test_users.py  testing_db.py
src/web/: exceptions.py
(+290 files in other folders)
