[tool.poetry]
name = "fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Sergei Storozhuk <s_storozhuk@wargaming.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.36"}
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
