[tool.poetry]
name = "fastapi-auth"
version = "0.1.0"
description = ""
authors = ["Sergei Storozhuk <s_storozhuk@wargaming.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.26"}
python-multipart = "^0.0.9"
aiofiles = "^24.1.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
fastapi-utils = "^0.7.0"
typing-inspect = "^0.9.0"
psycopg2 = "^2.9.9"
fastapi-filter = "^0.6.1"
openpyxl = "^3.1.5"
python-docx = "^1.1.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
httpx = "^0.27.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
